# fashion_recommendation_engine

./: .gitignore  01_data_prep.py  01b_create_metadata.py  02_train_candidate_gen.py  03_train_ranker.py  04_api.py  05_precompute_features.py  Dockerfile  README.md  app.py  index.html  pyproject.toml  requirements.txt  requirements_deploy.txt
fashion-recsys-deploy/: Dockerfile  app.py  requirements.txt
processed/: art2idx.json  article_features.parquet  idx2art.json  valid_articles.csv
